Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109453

GDI fallback surface format for Win 11 (21H2)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.7, 6.4.3, 6.5.0, 6.6.0
    • 5.15.7, 6.2.6
    • GUI: OpenGL
    • Windows 11 (21H2), Intel Iris XE + NVidia graphics cards.
    • Windows
    • 3e619aff3 (dev), e0d900558 (6.4), 9b3848c5d (6.5), 75e5cc0eb (tqtc/lts-6.2)

      We have received crash reports from users where the log files show our shared QOpenGLContext is created with a QSurfaceFormat with OpenGL version 1.1. The program then crashes when we try to initialize shaders.

      Here is an example context:

      QOpenGLContext(0x1e6e01b48e0, nativeHandle=QVariant(QWGLNativeContext, ), format=QSurfaceFormat(version 1.1, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 16, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 1, colorSpace QSurfaceFormat::DefaultColorSpace, profile QSurfaceFormat::NoProfile), screen="\\.\DISPLAY1")

      We have tens of thousands of users, and we've only seen this on Windows 11 machines that have Intel Iris XE + NVidia graphics cards. Oddly, the error occurs when the program is using the NVidia card, which is the default. If the user configures our program to use the Intel integrated card, the issue does not occur.

      The customers have tried various NVidia driver updates, and it doesn't seem to make a difference.

      So far, though, we have been unable to duplicate this.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            dzedsystems Dyami Caliri
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes